# thunderduck

./: .gitignore  =1.48.1  CLAUDE.md  CONNECTION_CLEANUP_TEST_GUIDE.md  CURRENT_FOCUS_ARROW_STREAMING_REFACTORING.md  CURRENT_FOCUS_DIFFERENTIAL_TEST_PARITY.md  CURRENT_FOCUS_E2E_TEST_GAPS.md  CURRENT_FOCUS_FULL_SUITE_BASELINE.md  CURRENT_FOCUS_FUNCTION_COVERAGE.md  CURRENT_FOCUS_KNOWN_ISSUES.md  CURRENT_FOCUS_PREPROCESSSQL_ELIMINATION.md  CURRENT_FOCUS_RELAXED_MODE_REPORT.md  CURRENT_FOCUS_SPARK_CONNECT_GAP_ANALYSIS.md  CURRENT_FOCUS_STRICT_MODE_REPORT.md  CURRENT_FOCUS_TPCH_FAILURE_ANALYSIS.md  CURRENT_FOCUS_dataframe_refinement.md  CURRENT_FOCUS_test_failure_analysis.md  DATABASE_CONNECTION_CLEANUP_ANALYSIS.md  DATAFRAME_API_ACHIEVEMENTS.md  DATAFRAME_API_IMPROVEMENTS_SUMMARY.md  DATAFRAME_API_PROGRESS.md  DATAFRAME_API_ROADMAP.md  EXECUTIVE_SUMMARY.md  HIVE_MIND_CONSENSUS_REPORT.md  HIVE_MIND_FIX_SUMMARY.md  HIVE_MIND_RACE_CONDITION_ANALYSIS.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE1_WEEK2_PLAN.md  PROGRESS.md  PROTOBUF_ISSUE_ANALYSIS.md  Q36_DUCKDB_LIMITATION.md  README.md  RESEARCHER_WEEK2_GAPS_REPORT.md  SESSION_SUMMARY_2025_10_27.md  SPARK_SUM_TYPE_ANALYSIS.md  TOOLCHAIN_VERSION_ANALYSIS.md  WEEK10_COMPLETION_REPORT.md  WEEK12_COMPLETION_REPORT.md  WEEK12_PROGRESS_REPORT.md  (+28 more)
.claude/: settings.local.json
.devcontainer/: .dockerignore  Dockerfile  README.md  claude.json.template  devcontainer.json  generate-claude-config.sh
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/cdk/: app.py  benchmark_stack.py  cdk.context.json  cdk.json  requirements.txt
benchmarks/ec2/: __init__.py  benchmark.py  cleanup.py  generate_data.py  provisioner.py  remote_setup.sh  requirements.txt  results.py  run_benchmark.py  setup_s3.py  spark_config.py
benchmarks/queries/: __init__.py  tpcds_dataframe.py  tpch_dataframe.py
benchmarks/tpch_queries/: q1.sql  q10.sql  q12.sql  q13.sql  q18.sql  q3.sql  q5.sql  q6.sql
connect-server/: README.md  pom.xml
core/: pom.xml
docs/: Analysis_and_Design.md  DATAFRAME_API_RECOMMENDATION.md  DATAFRAME_API_TEST_STRATEGY.md  FULL_SUITE_BASELINE.md  Implementation_Plan_Embedded.md  MVP_IMPLEMENTATION_PLAN.md  PLATFORM_SUPPORT.md  README.md  SPARK_CONNECT_GAP_ANALYSIS.md  SPARK_CONNECT_PROTOCOL_SPEC.md  SUPPORTED_OPERATIONS.md  TPC_H_BENCHMARK.md  example_of_guidance_conversations.md  testing_correctness.md
docs/architect/: ARRAY_FUNCTIONS_DESIGN.md  ARROW_STREAMING_ARCHITECTURE.md  CATALOG_OPERATIONS.md  CLAUDE_CODE_EFFICIENCY_REVIEW.md  DIFFERENTIAL_TESTING_ARCHITECTURE.md  DIFFERENTIAL_TESTING_GUIDE.md  DUCKDB_QUERY_PLAN_ANALYSIS.md  EC2_BENCHMARKING_SPEC.md  INTERACTIVE_NOTEBOOK_SPEC.md  JAVA21_REFACTORING_PROPOSAL.md  LAMBDA_AND_CALL_FUNCTION_SPEC.md  PROTOBUF_AND_ARROW_CONFIGURATION.md  SESSION_MANAGEMENT_REDESIGN.md  SINGLE_SESSION_ARCHITECTURE.md  SPARKSQL_PARSER_DESIGN.md  SPARKSQL_PARSER_RESEARCH.md  SPARK_COMPAT_EXTENSION.md  SPARK_CONNECT_ARCHITECTURE.md  SPARK_CONNECT_PROTOCOL_COMPLIANCE.md  SPARK_CONNECT_QUICK_REFERENCE.md  TAIL_CHAINING_DESIGN.md  TESTING_STRATEGY.md  TO_SCHEMA_OPERATION_SPEC.md  UDF_SUPPORT_RESEARCH.md  UNRESOLVED_OPERATIONS_SPEC.md
docs/dataframe_api/: DATAFRAME_API_GAPS.md  DATAFRAME_API_TEST_RESULTS.md
docs/dev_journal/: M10_POST_CLEANUP_REPORT.md  M12_COMPLETION_REPORT.md  M13_COMPLETION_REPORT.md  M14_COMPLETION_REPORT.md  M15_COMPLETION_REPORT.md  M16_COMPLETION_REPORT.md  M17_SESSION_MANAGEMENT_REVAMP_REPORT.md  M19_COLUMN_OPERATIONS_AND_PROTOBUF_FIX.md  M1_COMPLETION_REPORT.md  M20_ARROW_STREAMING_REFACTORING.md  M21_TAIL_OPERATION.md  M22_SHOWSTRING_CORRECTION.md  M23_SAMPLE_OPERATION.md  M24_WRITE_OPERATION.md  M25_DISTRIBUTED_OPS_NOOP.md  M26_COMPLETION_REPORT.md  M27_COMPLETION_REPORT.md  M28_SUBQUERY_ALIAS.md  M29_TEMP_VIEW_FIX.md  M2_COMPLETION_REPORT.md  M30_Q1_DATA_FIX_AND_TEST_CONSOLIDATION.md  M33_TAIL_STREAMING_FIX.md  M34_DROP_TEMP_VIEW.md  M35_WITH_COLUMN_RENAMED_FIX.md  M37_NA_FUNCTIONS_AND_WITHCOLUMN_FIX.md  M3_COMPLETION_REPORT.md  M40_DIFFERENTIAL_TEST_EXPANSION.md  M47_COMPLEX_TYPE_EXPRESSIONS_IMPLEMENTATION.md  M48_TYPE_LITERALS_IMPLEMENTATION.md  M49_TO_SCHEMA_IMPLEMENTATION.md  M4_COMPLETION_REPORT.md  M50_DIRECT_ALIAS_OPTIMIZATION.md  M51_TEST_INFRASTRUCTURE_OVERHAUL.md  M52_TYPE_INFERENCE_ENGINE.md  M53_PIVOT_AND_DATAFRAME_REFINEMENT.md  M5_COMPLETION_REPORT.md  M68_DECIMAL_PRECISION_FIX.md  M69_DATETIME_TYPE_INFERENCE_FIX.md  M6_COMPLETION_REPORT.md  M70_PERFORMANCE_INSTRUMENTATION_AND_RESEARCH.md  (+13 more)
docs/pending_design/: KNOWN_ISSUES.md  TYPE_LITERALS_SPEC.md
docs/research/: DUCKDB_TPCDS_DISCOVERY.md  (+8 more)
hive-mind-fixes/: IMPLEMENTATION_GUIDE.md  README.md  auto-save-middleware-fix.js  hive-mind-coordinator-fix.js  session-manager-fix.js
playground/: launch.sh  requirements.txt  setup_playground.py  thunderduck_playground.py  tpch_benchmark.py  util.py
scripts/: download_tpcds_queries.py  download_tpcds_queries.sh  generate_tpcds_batch4.py  generate_tpcds_batch5.py  generate_tpcds_data.py  generate_tpcds_references_batch1.py  generate_tpcds_references_batch2.py  generate_tpcds_references_batch3.py  generate_tpcds_via_duckdb.py  tpcds_smoke_test.py
tasks/: lessons.md
tests/: debug_null_type.py  pom.xml
(+421 files in other folders)
