[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderduck"
version = "0.1.0"
description = "Spark Connect server powered by DuckDB"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

# Enable rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults (common in FastAPI)
    "B904",  # raise from exception (not always necessary)
]

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["N802", "N803"] # Allow non-PEP8 names in tests

[tool.ruff.isort]
known-first-party = ["thunderduck"]
force-single-line = false
lines-after-imports = 2

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.pytest_cache
  | \.ruff_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["thunderduck"]

[tool.pytest.ini_options]
testpaths = ["tests/integration", "tests/src/test/python"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"

# Test markers
markers = [
    "tpch: TPC-H benchmark tests",
    "tpcds: TPC-DS benchmark tests",
    "slow: Slow running tests",
    "dataframe: DataFrame API tests",
    "sql: SQL tests",
]

# Timeout settings
timeout = 300
timeout_method = "thread"

# Coverage options (if using pytest-cov)
[tool.coverage.run]
source = ["tests"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
