[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderduck"
version = "0.1.0"
description = "Spark Connect server powered by DuckDB"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function calls in argument defaults
    "B904",   # raise from exception
    "B905",   # zip() without strict= — lengths pre-validated
    "N812",   # lowercase imported as non-lowercase — `import functions as F` is PySpark convention
    "SIM105", # contextlib.suppress — try/except/pass clearer in cleanup
    "SIM114", # combine if branches — readability preference in tests
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["N801", "N802", "N803", "B017"]
"tests/**/conftest.py" = ["E402"]
"scripts/**/*.py" = ["N812"]

[tool.ruff.lint.isort]
known-first-party = ["thunderduck"]
force-single-line = false
lines-after-imports = 2

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.pytest_cache
  | \.ruff_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["thunderduck"]

[tool.pytest.ini_options]
testpaths = ["tests/integration", "tests/src/test/python"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"

# Test markers
markers = [
    "tpch: TPC-H benchmark tests",
    "tpcds: TPC-DS benchmark tests",
    "slow: Slow running tests",
    "dataframe: DataFrame API tests",
    "sql: SQL tests",
    "timeout: Per-test timeout in seconds",
]

# Timeout settings
timeout = 300
timeout_method = "thread"

# Coverage options (if using pytest-cov)
[tool.coverage.run]
source = ["tests"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
